--- a/copilot/index.html
+++ b/copilot/index.html
@@ -1,5 +1,7 @@
 <html>
-  <head> </head>
+  <head>
+    <meta charset="UTF-8" />
+  </head>
   <body>
     <h1>Chainlit Copilot Test</h1>
     <script src="http://localhost:8000/copilot/index.js"></script>
